Add fetch_market_data.py CLI tool (see docstring for details); improve chunked fetching and caching in polymarket_api.py; remove tracked __pycache__ files

--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,18 @@ dmypy.json
 cython_debug/
 
 # Our generated output
-output/ 
+output/
+
+# Data and outputs
+data/
+outputs/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db 
